# rust-rocket-sample

./: Cargo.toml  LICENSE  README.md  cheatsheet.txt
assets/: Rust Rocket Sample.postman_collection.json  sample-list.json  sample.json  sample.txt
src/: main.rs
src/constants/: auth.rs  database.rs  fairings.rs  mod.rs
src/fairings/: auth.rs
src/handlers/: auth.rs  curl.rs  database.rs  fs.rs  general.rs  mod.rs  redis.rs  student.rs
src/helpers/: auth.rs  calc.rs  catcher.rs  database.rs  mod.rs
src/models/: article.rs  auth.rs  general.rs  header.rs  mod.rs  pokemon.rs  redis.rs  student.rs
src/responses/: article.rs  auth.rs  general.rs  mod.rs  pokemon.rs  redis.rs  student.rs
src/tests/: general_test.rs  mod.rs  rocket_general_test.rs
