[package]
name = "rust-rocket-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.34", features = ["serde"] }
num-bigint = "0.4.4"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4"] }
