[package]
name = "rust-rocket-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bcrypt = "0.15.0"
chrono = { version = "0.4.34", features = ["serde"] }
curl = "0.4.46"
jsonwebtoken = "9.2.0"
mysql = "24.0.0"
num-bigint = "0.4.4"
num-traits = "0.2.18"
redis = { version = "0.24.0", features = ["json", "tokio-comp"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.7.0", features = ["v4"] }
